//- manage ERR packets which can be received at any time
- macros.h should be endian dependant (configure check ?)
- make dirlist more generic (merge apps & vars)

To do (USB):
- create a linked list of allocated virtual packet and clear/release them on ticalcs_error_get. Same for calcparam
- check sending of FLASH on TI84+/D-BUS (FlashContent.data_length)
- s/r backup
- send OS

Log:

- 06/05/2006, version 0.1.1: roms
	- make ticalcs_dirlist_mem_used useable with apps tree
	- implemented get_memfree functions

- 15/04/2006, version 0.1.0: roms
	- implemented USB hand-helds support
	- split sending of FLASH app & os into 2 functions.
	- renamed some function of the API (send/recv_flash into send/recv_app)

- 25/03/2006, version 0.0.8: roms
	- bitmap for screenshot is now allocated at the end of transfer.
	- work on DirectLink in progress.

- 16/03/2006, version 0.0.7: roms
	- fixed bug in TI92 recv_backup
	- added periodic refresh from callbacks

- 21/02/2006, version 0.0.6: roms
	- switched to ticonv library
	- send HOME key before dumping
	- don't list some system variables which appears in dirlist: regCoef and regEq.
	- fixed is_ready which checked the LSB instead of the MSB status word
	- added 2 functions for adding/removing an entry from a dirlist tree
	- directory list is now free'd
	- fixed TI73 sending & receiving of FLASH apps
	- fixed OS version formatting
	- set hw revision to -1 (n/a) for TI8x calcs
	- don't use static Flash/FileContent structures: they are badly released because often not zero'ed.
	
- 20/02/2006, version 0.0.5: roms
	- error message is a glib allocated string for now.

- 23/01/2006, version 0.0.4: roms
	- modified to follow ticables2 API changes.
	- fixed critical bug in ticalcs2.pc.in: the header location was include/tilp instead of include/tilp2

- 24/09/2005, version 0.0.3: roms
	- fixed critical bug in dbus_send: use len instead of length which makes 64KB blocks copied as 0B blocks :-(

- 14/09/2005, version 0.0.2: roms